@@ -185,7 +185,16 @@ module BoxGrinder
               :i386 => {:aki => 'aki-407d9529'},
               :x86_64 => {:aki => 'aki-427d952b'}
             }
+          },
+
+          'sa-east-1' => {
+            :endpoint => 'ec2.sa-east-1.amazonaws.com',
+            :location => 'sa-east-1',
+            :kernel => {
+              :i386 => {:aki => 'aki-803ce39d'},
+              :x86_64 => {:aki => 'aki-d03ce3cd'}
           }
+         }
         }
   end
 end
