@@ -11,6 +11,7 @@ v0.10.0
 * [BGBUILD-323] Invalid kernel version recognition makes recreating initrd impossible
 * [BGBUILD-326] Ensure building from root directory is successful
 * [BGBUILD-211] Support for registering appliances with libvirt
+* [BGBUILD-331] Add support for sa-east-1 EC2 region
 
 v0.9.8
 
